[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2.6"
thiserror = "1.0.30"
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.9" # 处理 protobuf 的代码
tracing = "0.1.30"
dashmap = "5.1.0"
sled = "0.34"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
futures = "0.3"
kv = "0.23.1"
async-prost = "0.3.0"
anyhow = "1.0.53"
tracing-subscriber = "0.3.8"
tempfile = "3"
tokio-util = { version = "0.6", features = ["codec"]}

[build-dependencies]
prost-build = "0.9.0"